--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegram
+spring.datasource.username=myUser
+spring.datasource.password=135
+spring.liquibase.change-log=classpath:changelog/changelog-master.yml
+spring.jpa.hibernate.ddl-auto=update
+telegram.bot.token= 5322534616:AAGkxVEeUKvPvdmMj0uUmsvIHjpRW-WGwJo
